# neumann

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  README.md  beads_backup_unique.jsonl  chunker.py  config.py  embeddings.py  env.example  handoff.md  ids.py  indexer.py  main.py  models.py  pyproject.toml  pytest.ini  render_to_webp.py  summarize.py
.beads/: beads.base.jsonl  beads.base.meta.json  beads.db  beads.left.jsonl  beads.left.meta.json  deletions.jsonl  issues.jsonl
.cursor/plans/: implement-code-review-changes-c2d4cba0.plan.md  mvp-optical-memory-e700b5a9.plan.md
api/: AGENTS.md  app.py  deps.py  models.py
api/routes/: __init__.py  docs.py  search.py
backend/: config.py  embeddings.py  indexer.py  main.py  render_to_webp.py  summarize.py  utils.py
backend/api/: AGENTS.md  __init__.py  app.py  deps.py  models.py
backend/api/routes/: __init__.py  docs.py  search.py
docs/: AGENTS.md  Evaluating-Documentation-Approach.md  IMPLEMENTATION_PLAN.md  UI_AGENT_PROMPT.md  UI_IMPLEMENTATION_PLAN.md  acceptance_results.md  beads.md  main-spec.md
examples/: .env.example
frontend/: README.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: app-providers.tsx  layout.tsx  page.tsx
frontend/src/lib/: api-client.ts  types.ts  use-cart.ts  use-config.ts  use-search.ts
scripts/: AGENTS.md  test-manual
test_data/app/: page.tsx
test_data/app/api/chat/: route.ts
test_data/components/: activity-sidebar.tsx  chat-input-simple.tsx  chat-section.test.tsx  chat-section.tsx  inbox-detail.tsx  inbox-insights-detail.tsx  inbox-insights-list.tsx  inbox-list.tsx  inbox-nav.tsx  inbox-right-sidebar.tsx  insights-loading.tsx  projects-sidebar.tsx  top-nav.tsx  workflow-panel.tsx
test_data/components/ui/: tooltip.tsx
test_input/: hello.py
tests/: AGENTS.md  conftest.py  test_acceptance.py  test_chunker.py  test_cli.py  test_code_to_html.py  test_config.py  test_defaults_and_pages_only.py  test_embeddings.py  test_hybrid_search.py  test_indexer.py  test_integration_nm27.py  test_language_backward_compat.py  test_lexical_search.py  test_metadata_normalization.py  test_models.py  test_pages_jsonl.py  test_semantic_search.py  test_summarize.py
tests/fixtures/data/app/: globals.css  layout.tsx
tests/fixtures/data/app/inbox/: page.tsx
tests/fixtures/input/: app.js  sample.md
tests/fixtures/nm27_corpus/docs/: vector.md
tests/fixtures/nm27_corpus/src/: auth.ts  db.ts
tests/manual/: QUICKSTART.md  README_API_TESTS.md  TEST_EXECUTION_RESULTS.md  run_tests.sh  test_api_quick.py  test_api_search_endpoints.py  test_cli_review_fixes.py  test_lexical_improvements.py  test_lexical_search_e2e.py  test_semantic_search_e2e.py  test_summarization.py
